--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
@@ -35,5 +36,6 @@
 
     <p id="action-message">Make your move</p>
 
+    <script src="app.js"></script>
 </body>
 </html>
