--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <p id="action-message">Make your move</p>
 
+    <script src="util.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
