--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Rock Paper Scissors Game</title>
 </head>
 <body>
@@ -36,7 +36,8 @@
 
     <p id="action-message">Make your move</p>
 
-    <script src="util.js"></script>
-    <script src="app.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
